welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:20: error: Unmatched closing brace '}' ignored here
 }
 ^